# panda_moveit

./: CMakeLists.txt  README.md  dexnet_requirements.txt  package.xml
include/panda_moveit/: pick_and_place.hpp
launch/: pick_and_place.launch  run_gazebo.launch  run_sim.launch  rvizsim.launch
scripts/: pick_and_place.cpp  pick_and_place.py
src/: main.cpp  pick_and_place.cpp
